--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^0.4.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@openzeppelin/contracts": "^4.5.0",
-    "dotenv": "^16.0.0"
+    "@xtools-at/hardhat-sourcify": "^0.2.0",
+    "dotenv": "^16.0.0",
+    "nodejs": "^0.0.0"
   }
 }
